package com.example.demo.entities;


import javax.persistence.*;
import java.util.Date;

@Entity
@Table(name = "charging_queue")
public class ChargingQueue  {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @Column(name = "start_time")
    private Date startTime;

    @Column(name = "end_time")
    private Date endTime;

    /*@ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "id_power_unit")
    private PowerUnitEntity powerUnitEntity;*/

    @Column
    private float amount;

    @ManyToOne(fetch = FetchType.LAZY, cascade = CascadeType.ALL)
    @JoinColumn(name = "id_user")
    private UsersEntity userEntity;

    @ManyToOne(fetch = FetchType.LAZY, cascade = CascadeType.ALL)
    @JoinColumn(name = "id_car")
    private CarsEntity car;

    public ChargingQueue() {
    }

    public Long getId() {
        return id;
    }

    public void setId(Long id) {
        this.id = id;
    }

    public Date getStartTime() {
        return startTime;
    }

    public void setStartTime(Date startTime) {
        this.startTime = startTime;
    }

    public Date getEndTime() {
        return endTime;
    }

    public void setEndTime(Date endTime) {
        this.endTime = endTime;
    }

    /*public PowerUnitEntity getPowerUnitEntity() {
        return powerUnitEntity;
    }

    public void setPowerUnitEntity(PowerUnitEntity powerUnitEntity) {
        this.powerUnitEntity = powerUnitEntity;
    }*/

    public float getAmount() {
        return amount;
    }

    public void setAmount(float amount) {
        this.amount = amount;
    }

    public UsersEntity getUserEntity() {
        return userEntity;
    }

    public void setUserEntity(UsersEntity userEntity) {
        this.userEntity = userEntity;
    }

    public CarsEntity getCar() {
        return car;
    }

    public void setCar(CarsEntity car) {
        this.car = car;
    }
}
